--- a/custom_styles.css
+++ b/custom_styles.css
@@ -24,6 +24,12 @@
     min-width: 75px;
 }
 
+#chart-wrapper {
+    margin: 2em auto;
+    width: 60%;
+}
+
+
 @media (min-width: 1400px) {
     .lg-bp-3-columns>* {
         flex: 0 0 auto;
