--- a/custom_styles.css
+++ b/custom_styles.css
@@ -26,14 +26,12 @@
 
 #chart-wrapper {
     width: 100%;
+    height: 70vh !important;
 }
 
 #chart-with-text {
     margin: 2em auto;
     width: 70%;
-}
-
-#chart-with-text {
     text-align: center;
 }
 
